--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^1.0.0-rc.2",
+    "ejs": "^2.5.8",
+    "express": "^4.16.3",
+    "load-json-file": "^4.0.0"
   }
 }
